tests/ui/attributes/export/crate-type-2.rs
//@ compile-flags: --crate-type=sdylib
//~^ ERROR  `sdylib` crate type is unstable
